tests/invalid/security/include_user_input.php
<?php

$page = $_GET['page'];
include $page;
<?php

include $_GET['file'];

